// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NO_COLOR golden (chalk.level = 0 で tier 読取り可能) > cancel wide (width=200) golden snapshot + tier 読取り可能 1`] = `
"

 気象警報・注意報 取消

┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ [取消]  気象警報・注意報時系列情報  (取消)                                                                                                                                                           │
├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│ VPWP50  2026-06-05 17:00:00  稚内地方気象台                                                                                                                                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`NO_COLOR golden (chalk.level = 0 で tier 読取り可能) > criteria_period standard (width=140) golden snapshot + tier 読取り可能 1`] = `
"

 ★ 土砂災害・高潮 (L4)　ピーク 5日夜のはじめ頃　(土砂災害)

╔══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
║ [緊急]  気象警報・注意報時系列情報                                                                                                       ║
╠   ★ 危険警報 (L4)    ════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 級   │ 種別             │ 地域               │ 時刻枠                         │ ピーク             │ 基準到達                            ║
║ ★    │ 土砂災害 (L4)    │ 稚内市             │ 夜のはじめ頃-夜遅く (2枠/6h)   │ 5日夜のはじめ頃    │ 18:00 〜 24:00 (6h)                 ║
║ ★    │ 高潮 (L4)        │ 稚内市/稚内海岸    │ 夜のはじめ頃                   │ 5日夜のはじめ頃    │ 18:00 〜 21:00 (3h)                 ║
╠     ☆ 警報 (L3)      ════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 級   │ 種別             │ 地域               │ 時刻枠                         │ ピーク             │ 基準到達                            ║
║ ☆    │ 高潮 (L3)        │ 稚内市/礼文海岸    │ 夜のはじめ頃                   │ -                  │ -                                   ║
╠ [詳細] ══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║   ★ 土砂災害 (L4) @稚内市                                                                                                                ║
║       Sentence: 5日夜のはじめ頃から夜遅くにかけて警戒レベル4相当の予測                                                                   ║
║   ★ 高潮 (L4) @稚内市/稚内海岸                                                                                                           ║
║       Sentence: 稚内海岸で5日夜のはじめ頃に警戒レベル4相当                                                                               ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ VPWP50  2026-06-05 17:00:00  稚内地方気象台                                                                                              ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
`;

exports[`NO_COLOR golden (chalk.level = 0 で tier 読取り可能) > high_severity standard (width=140) golden snapshot + tier 読取り可能 1`] = `
"

 ★ 土砂災害 (L4)　稚内市　ピーク 5日夜のはじめ頃

╔══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
║ [緊急]  気象警報・注意報時系列情報                                                                                                       ║
╠   ★ 危険警報 (L4)    ════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 級   │ 種別             │ 地域               │ 時刻枠                         │ ピーク             │ 基準到達                            ║
║ ★    │ 土砂災害 (L4)    │ 稚内市             │ 夜のはじめ頃-夜遅く (2枠/6h)   │ 5日夜のはじめ頃    │ -                                   ║
╠     ◆◆ 特別警報      ════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 級   │ 種別             │ 地域               │ 時刻枠                         │ ピーク             │ 基準到達                            ║
║ ◆◆   │ 大雨特別警報     │ 稚内市             │ 夜のはじめ頃                   │ 5日夜のはじめ頃    │ -                                   ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ VPWP50  2026-06-05 17:00:00  稚内地方気象台                                                                                              ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
`;

exports[`NO_COLOR golden (chalk.level = 0 で tier 読取り可能) > high_severity ultra-narrow (width=80) golden snapshot + tier 読取り可能 1`] = `
"

 ★ 土砂災害 (L4)　稚内市　ピーク 5日夜のはじめ頃

╔══════════════════════════════════════════════════════════════════════════════╗
║ [緊急]  気象警報・注意報時系列情報                                           ║
╠   ★ 危険警報 (L4)    ════════════════════════════════════════════════════════╣
║ 級   │ 種別             │ 地域                                               ║
║ ★    │ 土砂災害 (L4)    │ 稚内市                                             ║
╠     ◆◆ 特別警報      ════════════════════════════════════════════════════════╣
║ 級   │ 種別             │ 地域                                               ║
║ ◆◆   │ 大雨特別警報     │ 稚内市                                             ║
╠ [詳細] ══════════════════════════════════════════════════════════════════════╣
║   ◆◆ 大雨特別警報 @稚内市                                                    ║
║       時刻枠: 夜のはじめ頃                                                   ║
║       ピーク: 5日夜のはじめ頃                                                ║
║   ★ 土砂災害 (L4) @稚内市                                                    ║
║       時刻枠: 夜のはじめ頃-夜遅く (2枠/6h)                                   ║
║       ピーク: 5日夜のはじめ頃                                                ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ VPWP50  2026-06-05 17:00:00  稚内地方気象台                                  ║
╚══════════════════════════════════════════════════════════════════════════════╝"
`;

exports[`NO_COLOR golden (chalk.level = 0 で tier 読取り可能) > high_severity wide (width=200) golden snapshot + tier 読取り可能 1`] = `
"

 ★ 土砂災害 (L4)　稚内市　ピーク 5日夜のはじめ頃

╔══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
║ [緊急]  気象警報・注意報時系列情報                                                                                                                                                                   ║
╠   ★ 危険警報 (L4)    ════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 級   │ 種別             │ 地域               │ 時刻枠                         │ ピーク             │ 基準到達                     │ 備考                                                             ║
║ ★    │ 土砂災害 (L4)    │ 稚内市             │ 夜のはじめ頃-夜遅く (2枠/6h)   │ 5日夜のはじめ頃    │ -                            │ -                                                                ║
╠     ◆◆ 特別警報      ════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 級   │ 種別             │ 地域               │ 時刻枠                         │ ピーク             │ 基準到達                     │ 備考                                                             ║
║ ◆◆   │ 大雨特別警報     │ 稚内市             │ 夜のはじめ頃                   │ 5日夜のはじめ頃    │ -                            │ -                                                                ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ VPWP50  2026-06-05 17:00:00  稚内地方気象台                                                                                                                                                          ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
`;

exports[`NO_COLOR golden (chalk.level = 0 で tier 読取り可能) > local_area wide (width=200) golden snapshot + tier 読取り可能 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ [通知]  気象警報・注意報時系列情報                                                                                                                                                                   │
├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│ VPWP50  2026-06-05 17:00:00  稚内地方気象台                                                                                                                                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`NO_COLOR golden (chalk.level = 0 で tier 読取り可能) > nagano standard (width=140) golden snapshot + tier 読取り可能 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ [情報]  気象警報・注意報時系列情報                                                                                                       │
├       △ 注意報       ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│ 級   │ 種別             │ 地域               │ 時刻枠                         │ ピーク             │ 基準到達                            │
│ △    │ 濃霧注意報       │ 小諸市             │ ０６日朝-０６日昼前 (2枠/6h)   │ -                  │ -                                   │
│ △    │ 濃霧注意報       │ 佐久市             │ ０６日朝-０６日昼前 (2枠/6h)   │ -                  │ -                                   │
│ △    │ 濃霧注意報       │ 小海町             │ ０６日朝-０６日昼前 (2枠/6h)   │ -                  │ -                                   │
│ △    │ 濃霧注意報       │ 川上村             │ ０６日朝-０６日昼前 (2枠/6h)   │ -                  │ -                                   │
│ △    │ 濃霧注意報       │ 南牧村             │ ０６日朝-０６日昼前 (2枠/6h)   │ -                  │ -                                   │
│ △    │ 濃霧注意報       │ 南相木村           │ ０６日朝-０６日昼前 (2枠/6h)   │ -                  │ -                                   │
│ △    │ 濃霧注意報       │ 北相木村           │ ０６日朝-０６日昼前 (2枠/6h)   │ -                  │ -                                   │
│ △    │ 濃霧注意報       │ 佐久穂町           │ ０６日朝-０６日昼前 (2枠/6h)   │ -                  │ -                                   │
│ △    │ 濃霧注意報       │ 軽井沢町           │ ０６日朝-０６日昼前 (2枠/6h)   │ -                  │ -                                   │
│ △    │ 濃霧注意報       │ 御代田町           │ ０６日朝-０６日昼前 (2枠/6h)   │ -                  │ -                                   │
│ △    │ 濃霧注意報       │ 立科町             │ ０６日朝-０６日昼前 (2枠/6h)   │ -                  │ -                                   │
├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│ VPWP50  2026-06-06 05:00:00  長野地方気象台                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`NO_COLOR golden (chalk.level = 0 で tier 読取り可能) > unknown_code standard (width=140) golden snapshot + tier 読取り可能 1`] = `
"

 ☆ 大雨 (L3)　稚内市

╔══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
║ [警告]  気象警報・注意報時系列情報                                                                                                       ║
╠     ☆ 警報 (L3)      ════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 級   │ 種別             │ 地域               │ 時刻枠                         │ ピーク             │ 基準到達                            ║
║ ☆    │ 大雨 (L3)        │ 稚内市             │ 夜のはじめ頃                   │ -                  │ -                                   ║
╠ [詳細] ══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║   ☆ 大雨 (L3) @稚内市                                                                                                                    ║
║       未知: ?99                                                                                                                          ║
╠ ! 未知 Code ═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║   大雨浸水危険度 @稚内市  Code=?99 timeRef=2 → frame warning 昇格                                                                        ║
║   融雪危険度 @稚内市  Code=?12 timeRef=1 → frame warning 昇格                                                                            ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ VPWP50  2026-06-05 17:00:00  稚内地方気象台                                                                                              ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
`;
